# mcp-monster-jobs

./: .dockerignore  .gitignore  .smithery-test.yaml  DEPLOYMENT_TIMEOUT_FIX.md  Dockerfile  Dockerfile.dockerfile  Dockerfile.emergency  Dockerfile.minimal  Dockerfile.simple  Dockerfile.test  FIXES_SUMMARY.md  README.md  README_MCP.md  TEST_CONFIG.md  __init__.py  __main__.py  check_deployment.py  config.py  debug_scan.py  docker-compose.yml  job_details_models.py  main.py  minimal_test.py  monster_mcp_server.js  monster_package_json.json  monster_server.py  package-lock.json  package.json  pyproject.toml  quick_health_check.py  requirements.txt  requirements_build.txt  requirements_docker.txt  requirements_minimal.txt  scraper.py  server.js  server.py  session_manager.py  simple_server.py  smithery.json  (+21 more)
.claude/: settings.local.json
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md
job_scraper_server/: __init__.py  config.py  main.py  models.py  parser.py  server.py
src/: main.py  main_clean.py  main_deploy.py  main_emergency.py  main_minimal.py  mcp_server.py
src/routes/: monster_jobs.py
src/static/: index.html
