[project]
name = "monster-jobs-mcp-server"
version = "1.0.0"
description = "MCP server for searching Monster.com jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "flask==3.1.1",
    "flask-cors==6.0.0",
    "requests==2.32.5",
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []